--- a/digipal/templates/digipal/home_intro.html
+++ b/digipal/templates/digipal/home_intro.html
@@ -1,23 +1,28 @@
+<!--
 <p>
     A short paragraph introducing my website.
 </p>
 <p>
     It currently contains:
 </p>
+-->
+<p>
+    La base des données contient :
+</p>
 <ul>
-    <li>{{ statistic.manuscripts }} <a href='/digipal/search/?from_link=true&amp;s=1'>records of manuscripts and charters</a></li>
-    <li>{{ statistic.images }} <a href='/digipal/page/'>manuscript images</a></li>
-    <li>{{ statistic.graphs }} <a href="/digipal/search/?from_link=true&amp;s=1&amp;result_type=graphs">images of letters (graphs)</a></li>
-    <li>{{ statistic.hands }} <a href="/digipal/search/?terms=+&amp;basic_search_type=hands">records of scribal hands</a>.</li>
+    <li>{{ statistic.manuscripts }} <a href='/digipal/search/?from_link=true&amp;s=1'>manuscrits</a></li>
+    <li>{{ statistic.images }} <a href='/digipal/page/'>images</a></li>
+    <li>{{ statistic.graphs }} <a href="/digipal/search/?from_link=true&amp;s=1&amp;result_type=graphs">images d'enluminures<a></li>
+    <li>{{ statistic.hands }} <a href="/digipal/search/?terms=+&amp;basic_search_type=hands">artistes</a>.</li>
 </ul>
 <p>
-    Funded by X.
+    Projet soutenu par le Réseau national des Maisons de Science de l'Homme (RnMSH).
 </p>
 <p>
     <strong>
-          <a href="/about">Read More</a>
-        | <a href="/digipal/search/">Start Searching</a>
-        | <a href="/digipal/page/">Browse Images</a>
-        | <a href="/help/">How to Use</a>
+          <a href="/about">Plus d'information</a>
+        | <a href="/digipal/search/">Commencer la recherche</a>
+        | <a href="/digipal/page/">Voir les images</a>
+        | <a href="/help/">Aide</a>
     </strong>
 </p>
