--- a/digipal/templates/index.html
+++ b/digipal/templates/index.html
@@ -27,7 +27,8 @@
             
             {% block top_right %}
                 <div class="col-md-4 smaller justified">
-                    {% include "digipal/home_intro.html" %}
+                    {# include "digipal/home_intro.html" #}
+                    {% render_mezzanine_page "home.fr" %}
                 </div>
             {% endblock %}
             
@@ -39,6 +40,7 @@
         <div id="homeSection" class="row home-page-listings">
         
             {% block bottom_left %}
+	    {% comment %}
                 <div class="col-md-4 col-sm-12 recentPosts">
         
                     <h1 class='header1'><a href="/blog/category/blog">Blog</a></h1>
@@ -64,10 +66,8 @@
                         </p>
                     {% endif %}
                 </div>
-            {% endblock %}
-    
-            {% block bottom_middle %}
-            
+		{% endcomment %}
+
                 <div class="col-md-4 col-sm-12 recentPosts">
         
                     <h1 class='header1'><a href="/blog/category/news">News</a></h1>
@@ -93,12 +93,51 @@
                         </p>
                     {% endif %}
                 </div>
+
+
+            {% endblock %}
+    
+            {% block bottom_middle %}
+	    
+                <div class="col-md-4 smaller justified">
+                    {% render_mezzanine_page "home.glossary" %}
+                    {# include "digipal/home_intro.html" #}
+                </div>
+
+	    {% comment %}
+                <div class="col-md-4 col-sm-12 recentPosts">
+        
+                    <h1 class='header1'><a href="/blog/category/news">News</a></h1>
+                    {% load blog_tags keyword_tags i18n %}
+                    {% blog_recent_posts 4 category="news" as recent_posts %}
+                    {% if recent_posts %}
+                        <ul>
+                            {% for recent_post in recent_posts %}
+                                <li>
+                                    <a href="{{ recent_post.get_absolute_url }}">
+                                        {{ recent_post.title }}
+                                    </a>
+                                    <br/>
+                                    <span class="legend">
+                                        {{ recent_post.publish_date|timesince }}
+                                        ago, by {{ recent_post.user.first_name }} {{ recent_post.user.last_name }}
+                                    </span>
+                                </li>
+                            {% endfor %}
+                        </ul>
+                        <p>
+                            <a class='btn btn-default' href="/blog/category/news">More news &raquo;</a>
+                        </p>
+                    {% endif %}
+                </div>
+		{% endcomment %}
             {% endblock %}
             
             {% block bottom-right %}
-                <div class="col-md-4 col-sm-12">
+                <div class="col-md-4 col-sm-12 smaller justified">
                 
-                    {% render_mezzanine_page 'home.glossary' %}
+                    {# render_mezzanine_page 'home.glossary' #}
+                    {% render_mezzanine_page 'home.it' %}
         
                 </div>
             {% endblock %}
