Added canonical_reference in unique_together of Bonhum_TextSource; changes on the text editor.

--- a/digipal_project/templates/digipal_text/text_viewer_modals.html
+++ b/digipal_project/templates/digipal_text/text_viewer_modals.html
@@ -1,3 +1,4 @@
+<!-- btnPerson -->
 <div class="modal" id="btnPerson_modal" tabindex="-1" role="dialog">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
@@ -15,7 +16,7 @@
             <!-- This select is automatically filled with the persons linked to the text -->
             <!-- cf. text_viewer.html: fillModalSelectsWithAPIData() -->
           </select>
-          <p class="small text-muted">It is mandatory to select a person.</p>
+          <p class="small text-muted">It is mandatory to select a person.<br>Only one person can be selected.</p>
         </div>
         <hr>
         <div id="btnPerson_modal_items">
@@ -31,7 +32,9 @@
     </div>
   </div>
 </div>
+<!-- -->
 
+<!-- btnSource -->
 <div class="modal" id="btnSource_modal" tabindex="-1" role="dialog">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
@@ -49,7 +52,7 @@
             <!-- This select is automatically filled with the sources linked to the text -->
             <!-- cf. text_viewer.html: fillModalSelectsWithAPIData() -->
           </select>
-          <p class="small text-muted">It is mandatory to select a source for a direct source; it is facultative for an indirect source.</p>
+          <p class="small text-muted">It is mandatory to select a source for a direct source. It is facultative for an indirect source.<br>Several sources can be selected.</p>
         </div>
         <hr>
         <div id="btnSource_modal_items">
@@ -61,7 +64,9 @@
     </div>
   </div>
 </div>
+<!-- -->
 
+<!-- btnPlace -->
 <div class="modal" id="btnPlace_modal" tabindex="-1" role="dialog">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
@@ -79,7 +84,7 @@
             <!-- This select is automatically filled with the places -->
             <!-- cf. text_viewer.html: fillModalSelectsWithAPIData() -->
           </select>
-          <p class="small text-muted">It is mandatory to select a place.</p>
+          <p class="small text-muted">It is mandatory to select a place.<br>Only one place can be selected.</p>
         </div>
         <hr>
         <div>
@@ -89,7 +94,7 @@
             <!-- This select is automatically filled with the persons linked to the text -->
             <!-- cf. text_viewer.html: fillModalSelectsWithAPIData() -->
           </select>
-          <p class="small text-muted">It is not mandatory to select a person.</p>
+          <p class="small text-muted">It is not mandatory to select a person.<br>Several persons can be selected.</p>
         </div>
         <hr>
         <div id="btnPlace_modal_items">
@@ -101,7 +106,9 @@
     </div>
   </div>
 </div>
+<!-- -->
 
+<!-- btnTime -->
 <div class="modal" id="btnTime_modal" tabindex="-1" role="dialog">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
@@ -119,7 +126,7 @@
             <!-- This select is automatically filled with the persons linked to the text -->
             <!-- cf. text_viewer.html: fillModalSelectsWithAPIData() -->
           </select>
-          <p class="small text-muted">It is not mandatory to select a person.</p>
+          <p class="small text-muted">It is not mandatory to select a person.<br>Several persons can be selected.</p>
         </div>
         <hr>
         <div id="btnTime_modal_items">
@@ -131,7 +138,9 @@
     </div>
   </div>
 </div>
+<!-- -->
 
+<!-- btnTargetAudience -->
 <div class="modal" id="btnTargetAudience_modal" tabindex="-1" role="dialog">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
@@ -155,3 +164,4 @@
     </div>
   </div>
 </div>
+<!-- -->
