Added template tei_from_xhtml.xslt and changed method get_tei_from_text_response in viewer.py to handle XML-TEI transformation.

--- a/digipal_project/templates/digipal_text/text_viewer.html
+++ b/digipal_project/templates/digipal_text/text_viewer.html
@@ -593,8 +593,8 @@
             }
             fillModalSelectsWithAPIData();
 
-            // Reset the modal before it is shown
-            // (empty inputs, deselect options and buttons)
+            // Reset the modal before it is shown:
+            // show all options, empty inputs and message, deselect options and buttons
             function cleanModalBeforeShow(btn_name) {
               $(`#${btn_name}_modal .modal_select option`).each(function(index, option) {
                 $(option).show();
