Added story places to faceted search.

--- a/digipal_project/templates/pages/record_characters.html
+++ b/digipal_project/templates/pages/record_characters.html
@@ -138,7 +138,10 @@
                                               {% endfor %}
                                           {% endif %}
                                           {% if segment.place %}
-                                            Where: {{ segment.place }}
+                                            Where:
+                                              <a href="{{ segment.place.get_absolute_url }}">
+                                                {{ segment.place.name }}
+                                              </a>
                                           {% endif %}
                                         </td>
                                       </tr>
